--- a/outlier_detection_methods.ipynb
+++ b/outlier_detection_methods.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "https://github.com/raulbenitez/OUTLIER_DETECTION/blob/main/outlier_detection_methods.ipynb",
-      "authorship_tag": "ABX9TyNEd9LAQiVWNrp5vvYRoYoa",
+      "authorship_tag": "ABX9TyNvGH2QrycGVizEG1qE8BSQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1535,12 +1535,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QyI2KfmPIWba",
-        "outputId": "6df39817-b7eb-450f-b4c6-bc1f9da07f52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "QyI2KfmPIWba",
+        "outputId": "6df39817-b7eb-450f-b4c6-bc1f9da07f52"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -1579,11 +1579,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xb7xT-XpIoQC",
-        "outputId": "02b8a020-f02a-4b76-afd3-52edaf8e2d1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xb7xT-XpIoQC",
+        "outputId": "02b8a020-f02a-4b76-afd3-52edaf8e2d1e"
       },
       "source": [
         "from scipy import stats \n",
@@ -1620,12 +1620,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RTFryYGJKljQ",
-        "outputId": "a015726f-9551-45dc-d794-d5e14af29edb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 700
-        }
+        },
+        "id": "RTFryYGJKljQ",
+        "outputId": "a015726f-9551-45dc-d794-d5e14af29edb"
       },
       "source": [
         "x_normal = stats.norm.rvs(size=10000)\n",
@@ -2385,7 +2385,7 @@
         "id": "ZOjIeadbuFgI"
       },
       "source": [
-        "## Normality tests and q-q plots\n",
+        "### Normality tests and q-q plots\n",
         "\n",
         "Consider an experimental sequence of observations of a certain process that you want to implement in a Discrete-Event Simulation (DES) model. For instance, you may want to model the arrival of parts to a certain station or the service times of a certain machine. The graphical way to represent the similarity between two distributions is the q-q plot, representing the empirical cummulative distribution function (cdf) of the observations and the theoretical cdf of the assumed distribution. \n",
         "\n",
@@ -2401,7 +2401,7 @@
         "id": "e9aTihXTxJTK"
       },
       "source": [
-        "## a) Check if a regular sequence is normally distributed:"
+        "a) Check if a regular sequence is normally distributed:"
       ]
     },
     {
@@ -2544,7 +2544,7 @@
         "id": "_GbZzfYdyYGc"
       },
       "source": [
-        "## b) Check if a uniform sequence is normally distributed:\n"
+        "b) Check if a uniform sequence is normally distributed:\n"
       ]
     },
     {
@@ -2617,7 +2617,7 @@
         "id": "6rJloduRzE45"
       },
       "source": [
-        "## b) Check if a gaussian sequence is normally distributed:\n"
+        "b) Check if a gaussian sequence is normally distributed:\n"
       ]
     },
     {
@@ -3077,7 +3077,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 597
         },
-        "outputId": "2233c789-ddb6-4d94-935c-4074d1a0c3a1"
+        "outputId": "c1c0f0a5-8063-463f-ba1e-e71983907262"
       },
       "source": [
         "from sklearn.datasets import make_blobs\n",
@@ -3108,7 +3108,7 @@
         "plt.title(\"GMM clustering\")\n",
         "plt.show()"
       ],
-      "execution_count": 92,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -3116,14 +3116,14 @@
           "text": [
             "[9674.685229421246]\n",
             "[9674.685229421246, 9694.74636638684]\n",
-            "[9674.685229421246, 9694.74636638684, 9733.221692337966]\n",
-            "[9674.685229421246, 9694.74636638684, 9733.221692337966, 9778.857981876754]\n",
-            "[9674.685229421246, 9694.74636638684, 9733.221692337966, 9778.857981876754, 9820.994593390617]\n",
-            "[9674.685229421246, 9694.74636638684, 9733.221692337966, 9778.857981876754, 9820.994593390617, 9861.563128812642]\n",
-            "[9674.685229421246, 9694.74636638684, 9733.221692337966, 9778.857981876754, 9820.994593390617, 9861.563128812642, 9895.883899169065]\n",
-            "[9674.685229421246, 9694.74636638684, 9733.221692337966, 9778.857981876754, 9820.994593390617, 9861.563128812642, 9895.883899169065, 9938.990452745067]\n",
-            "[9674.685229421246, 9694.74636638684, 9733.221692337966, 9778.857981876754, 9820.994593390617, 9861.563128812642, 9895.883899169065, 9938.990452745067, 9976.083837359072]\n",
-            "[9674.685229421246, 9694.74636638684, 9733.221692337966, 9778.857981876754, 9820.994593390617, 9861.563128812642, 9895.883899169065, 9938.990452745067, 9976.083837359072, 10015.818515550867]\n",
+            "[9674.685229421246, 9694.74636638684, 9733.415334339747]\n",
+            "[9674.685229421246, 9694.74636638684, 9733.415334339747, 9779.5659274786]\n",
+            "[9674.685229421246, 9694.74636638684, 9733.415334339747, 9779.5659274786, 9817.935968902502]\n",
+            "[9674.685229421246, 9694.74636638684, 9733.415334339747, 9779.5659274786, 9817.935968902502, 9853.731978310087]\n",
+            "[9674.685229421246, 9694.74636638684, 9733.415334339747, 9779.5659274786, 9817.935968902502, 9853.731978310087, 9888.77449033635]\n",
+            "[9674.685229421246, 9694.74636638684, 9733.415334339747, 9779.5659274786, 9817.935968902502, 9853.731978310087, 9888.77449033635, 9935.315823496072]\n",
+            "[9674.685229421246, 9694.74636638684, 9733.415334339747, 9779.5659274786, 9817.935968902502, 9853.731978310087, 9888.77449033635, 9935.315823496072, 9981.01406654336]\n",
+            "[9674.685229421246, 9694.74636638684, 9733.415334339747, 9779.5659274786, 9817.935968902502, 9853.731978310087, 9888.77449033635, 9935.315823496072, 9981.01406654336, 10018.720456565276]\n",
             "...and the winner is GMM model G = 1\n"
           ]
         },
@@ -3144,12 +3144,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wQhlpWxRaXXl",
-        "outputId": "b156d5f4-9816-4312-e1ae-93fbbce80d33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        }
+        },
+        "id": "wQhlpWxRaXXl",
+        "outputId": "b156d5f4-9816-4312-e1ae-93fbbce80d33"
       },
       "source": [
         "plt.plot(bic,'bo-')"
